--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ form {
 
 .badge-large2 {
     font-size: 1rem;
-    top: -10px !important;
+    top: 0px !important;
     min-width: 25px !important;
     z-index: 1000 !important;
 }
@@ -557,6 +557,11 @@ button:hover {
     border: dashed 2px red;
     background-color: rgb(253, 242, 240);
     border-radius: 10px !important;
+}
+
+.custom-tooltip {
+    color: yellow !important;
+    max-width: none; 
 }
 
 #tipoElectrodomestico{
