--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
     src: url('./fonts/modica.otf'),
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Signika:wght@300..700&display=swap');
+
 *::selection {
     color: #fce96b;
     background-color: #0065C3;
@@ -27,6 +29,12 @@ h1 {
     text-align: center;
     color: #333;
     display: none;
+}
+
+.navbar-brand-text{
+    font-family: "Titan One", sans-serif;
+    color: gray;
+    font-size: 2rem;
 }
 
 form {
