--- a/styles.css
+++ b/styles.css
@@ -1882,23 +1882,22 @@ div.card-body > p > i{
     height: 30px;
 }
 
-.em-circle-state5{
-    font-weight: 900;
-    font-family: "Reddit Sans Condensed", sans-serif;
-    font-size: .8rem;
-    padding-inline: 5px;
-    padding: 5px;
-    border-radius: 10px;
+.em-circle-state5 {
+    font-weight: 600;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    font-size: 0.7rem; 
+    padding: 3px 8px; 
+    border-radius: 5px; 
     position: absolute;
-    top: -15px; 
+    top: -10px; 
     left: 10px;
-    background-color: blueviolet;
+    background-color: #007AFF;
     text-transform: uppercase;
     color: white;
     display: flex; 
     align-items: center; 
     justify-content: center;
-    height: 30px;
+    height: 24px; 
 }
 
 .em-circle-state-cliente{
