--- a/styles.css
+++ b/styles.css
@@ -3661,3 +3661,35 @@ input[disabled] {
 #sku-control-Meli{
     font-weight: 800;
 }
+
+.contador-container2 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.contador2 {
+    flex: 1;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    font-size: 1.3rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#contadorPreparados {
+    background-color: #28a745;
+    color: white;
+    margin-right: 10px;
+}
+
+#contadorSinPreparar {
+    background-color: #dc3545;
+    color: white;
+}
+
+.contador2 span {
+    font-weight: bold;
+}
+
+
