--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,11 @@ h1 {
     padding: 5px;
 }
 
+
 .navbar-brand-text2{
     font-family: "Titan One", sans-serif;
     font-size: 2rem;
-    color: orangered;
+    color: #41c9c9;
 }
 
 .blackCat{
