--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     margin: 0;
     padding: 0;
     background: rgb(52,152,219);
-    background: linear-gradient(183deg, rgba(52,152,219,1) 0%, rgba(0,70,139,1) 100%);
+    background: linear-gradient(183deg, #76baed 0%, #349cfa 50%, #1a73e8 100%);
 }
 
 h1 {
@@ -34,15 +34,29 @@ h1 {
 .navbar-brand-text {
     font-family: "Titan One", sans-serif;
     font-size: 2rem;
-    color: black;
+    color: #405572;
+    text-shadow: 2px 3px 0px #bfd5e9;
     padding: 5px;
 }
 
 
-.navbar-brand-text2{
+.navbar-brand-text2 {
+    font-family: "Titan One", sans-serif;
+    font-weight: 200;
+    font-size: 2rem;
+    color: #349cfa;
+    text-shadow: 2px 3px 0px #9ed3f4;
+    padding: 5px; 
+    border-radius: 5px; 
+}
+
+.navbar-brand-text4 {
+    margin-left: 25px;
     font-family: "Titan One", sans-serif;
     font-size: 2rem;
-    color: #41c9c9;
+    color: #405572;
+    text-shadow: 2px 3px 0px #bfd5e9;
+    padding: 5px;
 }
 
 .navbar-brand-text3{
@@ -53,7 +67,8 @@ h1 {
 
 
 .blackCat{
-    width: 110px;
+    margin-left: -158px;
+    width: 50px;
 }
 
 .mac-buttons {
@@ -147,9 +162,9 @@ form {
 }
 
 .six{
-    background-color: cornflowerblue;
-    border-radius: 10px;
-    padding: .3rem;
+    background-color: #349cfa;
+    border-radius: 5px;
+    padding: .2rem;
     margin-bottom: .5rem;
 }
 
@@ -173,7 +188,7 @@ form {
 
 .CpyLocalidad, .PisoyDepto{
     padding: .5rem;
-    border: dashed 2px cornflowerblue;
+    border: dashed 2px #349cfa;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -204,10 +219,6 @@ form {
 }
 
 #localidad{
-    font-family: "Chakra Petch", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    border: 1px solid red;
     font-weight: 800;
     height: 38px
 }
@@ -226,6 +237,7 @@ form {
     text-align: center;
 }
 .truck img {
+    display: none;
     width: 100%; 
     height: auto;
     border: 2px dashed #ccc; 
@@ -288,7 +300,7 @@ form {
     cursor: pointer;
 }
 .lista-localidades div:hover {
-    background-color: red;
+    background-color: #349cfa;
     color: white;
 }
 
@@ -311,7 +323,7 @@ form {
 }
 
 .clear-button {
-    background-color: white;
+    background-color: transparent;
     padding: .2rem;
     border-radius: 10px;
     display: none;
@@ -320,7 +332,7 @@ form {
     right: 16px; /* Posición de la "X" dentro del input */
     top: 50%;
     transform: translateY(-50%);
-    color: #440000;
+    color: #349cfa;
     font-size: 18px;
 }
 input {
@@ -328,16 +340,24 @@ input {
 }
 
 .doble{
-    text-align: justify;
     display: flex;
-    gap: .5rem;
+    justify-items: stretch;
+    align-items: center;
+    gap: 1rem;
     color: white;
     padding: .3rem;
 }
 
+.dobleText{
+    margin-left: 20px;
+    margin-right: 20px;
+    color: #292929;
+    display: flex;
+    justify-content: space-between;
+}
+
 .doble input{
     margin: 0;
-    margin-bottom: .3rem;
 }
 
 .doble label{
@@ -434,10 +454,14 @@ button:hover {
 }
 
 .origenEnvio{
-    background-color: cornflowerblue;
+    background-color: #349cfa;
     padding: .5rem;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-bottom: 5px;
+}
+
+.origenEnvio > select{
+    border-radius: 5px !important;
 }
 
 /* RESPUESTA ANDESMAR (SIN USO) */
@@ -588,9 +612,9 @@ button:hover {
 /* BULTOS */
 #respuesta2{
     display: none;
-    background-color: cornflowerblue;
+    background-color: #349cfa;
     padding: .5rem;
-    border-radius: 12px;
+    border-radius: 5px;
     color: white;
     font-weight: 600;
     margin-top: 0;
@@ -600,7 +624,7 @@ button:hover {
     display: none;
     background-color: red;
     padding: .5rem;
-    border-radius: 12px;
+    border-radius: 5px;
     color: white;
     font-weight: 600;
     margin-top: 0;
@@ -655,9 +679,9 @@ button:hover {
 #observaciones{
     text-transform: lowercase;
     height: 6rem;
-    border: dashed 2px red;
-    background-color: rgb(253, 242, 240);
-    border-radius: 10px !important;
+    border: dashed 2px #349cfa;
+    background-color: rgb(240, 251, 253);
+    border-radius: 5px !important;
 }
 
 .custom-tooltip {
@@ -666,9 +690,11 @@ button:hover {
 }
 
 #tipoElectrodomestico{
-    color: red;
-    border: 1px solid red;
-    font-weight: 800;
+    border-radius: 5px !important;
+    color: whitesmoke;
+    background-color: #349cfa;
+    border: 1px solid #349cfa;
+    font-weight: 600;
     margin-bottom: 10px;
 }
 
@@ -747,7 +773,6 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 1px 10px #00569892;
     position: relative;
 }
 
@@ -822,13 +847,13 @@ a.nav-link.active{
 }
 
 .nav-item .active {
-    font-weight: 800;
-    background-color: #1a75ff;
+    font-weight: 500;
+    background-color: #44b4fc;
     color: #ffffff;
 }
 
 a.nav-link.active, a.nav-link {
-    border-radius: 10px !important;
+    border-radius: 5px !important;
     transition: .5s;
 }
 
@@ -1468,8 +1493,8 @@ p.card-text:nth-child(9){
     padding: 0.5rem;
     width: fit-content;
     border-radius: 10px 10px 0 0;
-    border: solid 1px rgb(145, 182, 250); /* Borde transparente inicialmente */
-    color: black; /* Texto en un verde oscuro */
+    border: solid 1px rgb(145, 182, 250);
+    color: black; 
     font-size: 1.4rem;
     font-family: "Roboto", sans-serif !important;
     font-weight: 600;
@@ -1484,8 +1509,6 @@ p.card-text:nth-child(9){
     right: 10px;
     bottom: 10px;
 }
-
-
 
 .remitoCardMeli:hover{
     color: cornflowerblue;
