--- a/styles.css
+++ b/styles.css
@@ -2294,8 +2294,20 @@ div.card-body > p > i{
 
 .facturable {
     background-color: red;
-    animation: pulse 3s infinite;
+    animation: titilar 1s infinite alternate;
     position: relative;
+}
+
+@keyframes titilar {
+    0% {
+        background-color: red;
+    }
+    50% {
+        background-color: rgb(181, 1, 1); /* Cambia a otro color, como verde */
+    }
+    100% {
+        background-color: red;
+    }
 }
 
 .facturable::before {
@@ -2307,17 +2319,6 @@ div.card-body > p > i{
     transform: translateY(-50%);
     font-size: 1.2em;
     color: white;
-}
-
-@keyframes pulse {
-    0%, 100% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    50% {
-        transform: scale(1.005);
-        opacity: 0.95;
-    }
 }
 
 .em-state-andesmar{
@@ -2797,14 +2798,24 @@ div.card-body > p > i{
 
 /* FIN SUGERENCIAS BNA */
 
+.btn-bna-collapse{
+    margin-top: 0 !important;
+}
+
 .ios-card-text {
     font-size: 16px;
     color: #333;
     display: flex;
     align-items: center;
-    margin-bottom: 2px;
-    text-wrap: wrap !important;
-    text-overflow: ellipsis !important;
+    margin-bottom: -2px;
+    width: 100%;
+}
+
+.text-content {
+    flex-grow: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .ios-icon {
@@ -2934,10 +2945,45 @@ div .form-check {
     opacity: 0; 
 }
 
+/* Estilo para el alert */
+.alertSku, .alertErrorSku {
+    position: relative; /* Cambiar a absolute */
+    right: 20px;
+    background-color: #28a745; 
+    color: white;
+    padding: 15px 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    display: none; 
+    z-index: 1000;
+    transition: transform 0.3s ease, opacity 0.3s ease; 
+    transform: translateY(20px); 
+    opacity: 0; 
+}
+
+.alert-danger {
+    background-color: red; 
+}
+
 .alert.show, .alertError.show {
     display: block; 
     transform: translateY(0); 
     opacity: 1; 
+}
+
+.card-text-isSkuIncluded{
+    background: orangered;
+    padding: 12px 16px;
+    margin: 8px 0;
+    color: white;
+    text-align: center;
+    border-radius: 12px;
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
 }
 
 /* Estilo específico para alertError */
@@ -4183,3 +4229,45 @@ input[disabled] {
     border-radius: 10px;
 }
 
+.sku-modal-header {
+    background-color: #f0f0f5;
+    border-bottom: 1px solid #ccc;
+}
+.sku-modal-title {
+    font-weight: bold;
+    color: #333;
+}
+.sku-input-group {
+    display: flex;
+    align-items: stretch; 
+}
+.sku-input {
+    border-radius: 10px 0px 0px 10px !important;
+    flex: 1;
+    margin-right: 0;
+    height: 48px !important; 
+}
+#addSkuButton {
+    border-radius: 0px 10px 10px 0px !important;
+    height: 48px !important; 
+}
+
+.sku-spinner {
+    margin-top: 10px;
+    text-align: center; 
+}
+
+.sku-spinner {
+    width: 2rem;  
+    height: 2rem; 
+    border-width: 0.4rem;
+    color: orangered; 
+}
+
+
+.sku-table {
+    margin-top: 15px;
+}
+.sku-table th, .sku-table td {
+    text-align: center;
+}
