--- a/styles.css
+++ b/styles.css
@@ -2183,6 +2183,32 @@ div.card-body > p > i{
     justify-content: center;
 }
 
+.em-circle-state-time-cancelado {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    font-size: .9rem;
+    margin-bottom: 5px;
+    padding: 8px 10px; 
+    border-radius: 5px; 
+    position: relative; 
+    background-color: red; 
+    text-transform: uppercase;
+    color: white;
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
+
+.button-container {
+    display: flex;
+    gap: 10px; 
+}
+
+.button-container .btn {
+    width: fit-content;
+    height: 48px; 
+}
+
 .em-circle-state2{
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
     text-transform: uppercase;
@@ -2482,6 +2508,20 @@ div.card-body > p > i{
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 10px;
+}
+
+.errorMeliBna{
+    width: 90%;
+    font-weight: 800;
+    text-align: left;
+    font-family: "Chakra Petch", sans-serif;
+    text-transform: uppercase;
+    color: green;
+    margin-top: 5px;
+    font-size: small;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: -10px;
 }
 
 .trio-de-botones{
