--- a/styles.css
+++ b/styles.css
@@ -1507,6 +1507,12 @@ p.card-text{
     border: solid 1px #ff3b30;
 }
 
+.correo-novogar, .correo-santafe {
+    background-color: green;
+    color: white;
+    border: solid 1px greenyellow;
+}
+
 .meli-box1{
     display: flex;
     gap: 5px;
