--- a/styles.css
+++ b/styles.css
@@ -3019,18 +3019,19 @@ div .form-check {
 }
 
 .card-text-isSkuIncluded{
-    background: orangered;
-    padding: 12px 16px;
-    margin: 8px 0;
-    color: white;
-    text-align: center;
-    border-radius: 12px;
-    font-size: 14px;
-    font-weight: 600;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 8px;
+    background-color: orangered;
+    color: whitesmoke;
+    padding: 12px 16px;
+    border: 1px solid orange;
+    border-radius: 10px;
+    margin: 8px 0;
+    font-size: small;
+    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 0;
 }
 
 /* Estilo específico para alertError */
