--- a/styles.css
+++ b/styles.css
@@ -4423,6 +4423,7 @@ input[disabled] {
 
 /* MODAL LOCALIDADES MELI */
 
+/* MODAL CODIGO POSTAL */
 .cp-custom-alert {
     padding: 15px;
     margin-bottom: 15px;
@@ -4455,4 +4456,16 @@ input[disabled] {
 #cp-alertContainer {
     position: relative;
     margin-top: 10px;
+}
+/* FIN MODAL CODIGO POSTAL */
+
+.AlertCalendario {
+    background-color: #E3F9E5;
+    color: #003300;
+    border: 1px solid #B5E8B5;
+    border-radius: 12px;
+    padding: 10px 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 14px;
+    text-align: center;
 }
