--- a/styles.css
+++ b/styles.css
@@ -1512,7 +1512,7 @@ p.card-text{
     border: solid 1px #ff3b30;
 }
 
-.correo-novogar, .correo-santafe {
+.correo-novogar, .correo-santafe, .correo-rafaela {
     background-color: green;
     color: white;
     border: solid 1px greenyellow;
