--- a/styles.css
+++ b/styles.css
@@ -4540,3 +4540,11 @@ input[disabled] {
     color: yellow;
     font-size: 20px;
 }
+
+.Alert33{
+    padding: 10px;
+    border-radius: 5px;
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
+}
